# projet_IF2

./: CMakeLists.txt  README.md  main.c  main.h  projet_IF2.exe.lnk
SDL/cmake/: sdl2-config-version.cmake  sdl2-config.cmake
src/: init_Plateau.c  init_Plateau.h  main.c  main.h  main_menu.c  main_menu.h  menu.c  menu.h  parsing.c  parsing.h  play.c  play.h  window.c  window.h
